<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arek.calculator.AdvancedModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">


        <EditText
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:freezesText="true"
            android:gravity="top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBskp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:onClick="backspace"
                    android:text="@string/BSKP" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:onClick="clear"
                    android:text="@string/CLEAR" />

                <Button
                    android:id="@+id/btnChangeSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="changeSign"
                    android:text="@string/CHANGE" />

                <Button
                    android:id="@+id/btnMul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="multiplication"
                    android:text="@string/MULTIPLICATION" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="sinus"
                    android:text="@string/SIN" />

                <Button
                    android:id="@+id/btnCos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="cosinus"
                    android:text="@string/COS" />

                <Button
                    android:id="@+id/btnTan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="tanges"
                    android:text="@string/TAN" />

                <Button
                    android:id="@+id/btnLn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="naturalLogarithm"
                    android:text="@string/LN" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="sqrt"
                    android:text="@string/SQRT" />

                <Button
                    android:id="@+id/btnExpToSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="powerToTwo"
                    android:text="@string/X2" />

                <Button
                    android:id="@+id/btnExpToY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="powerToY"
                    android:text="@string/XY" />

                <Button
                    android:id="@+id/btnLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="logarithm"
                    android:text="@string/LOG" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton7"
                    android:text="@string/SEVEN" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton8"
                    android:text="@string/EIGHT" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton9"
                    android:text="@string/NINE" />

                <Button
                    android:id="@+id/btnDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="division"
                    android:text="@string/DIV" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton4"
                    android:text="@string/FOUR" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton5"
                    android:text="@string/FIVE" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton6"
                    android:text="@string/SIX" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="addition"
                    android:text="@string/ADD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton1"
                    android:text="@string/ONE" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton2"
                    android:text="@string/TWO" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton3"
                    android:text="@string/THREE" />

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:onClick="subtraction"
                    android:text="@string/SUBTRACTION" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addButton0"
                    android:text="@string/ZERO" />

                <Button
                    android:id="@+id/btnComa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addComa"
                    android:text="@string/COMA" />

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:onClick="equal"
                    android:text="@string/EQUAL" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
