<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arek.calculator.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calculator"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/buttonSimple"
            android:onClick="moveToSimpleCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIMPLE"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/buttonAdvance"
            android:onClick="moveToAdvanceCacl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ADVANCE"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/buttonAbout"
            android:onClick="moveToAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ABOUT"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/buttonExit"
            android:onClick="moveToExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EXIT"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
